--- a/emotime/CMakeLists.txt
+++ b/emotime/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   image_transport
   usb_cam
+  cmt_tracker_msgs
 )
 
 ## System dependencies are found with CMake's conventions
