--- a/emotime/package.xml
+++ b/emotime/package.xml
@@ -52,11 +52,13 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>image_transport</build_depend>
+  <build_depend>cmt_tracker_msgs</build_depend>
   <build_depend>usb_cam</build_depend>
   <!--<build_depend>usb_cam</build_depend> -->
   <!--<build_depend>filesystem</build_depend>
   <build_depend>system</build_depend> -->
   <run_depend>catkin</run_depend>
+  <run_depend>cmt_tracker_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>roscpp</run_depend>
